# package-actions-cicd

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci-publish.yml
diabetes_model/: __init__.py  pipeline.py  predict.py  train.py
