[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-model" # Must match your package name
version = "0.1.5" # Your current package version
description = "A brief description of your project."
authors = [
  { name = "Diego Lemus", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9" # Minimum Python version required
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" } # This is the crucial line for your error