[metadata]
name = diabetes-model-dl
version = 0.2.3
author = Diego Lemus
description = Modelo de regresion logistica para clasificacion de diabetes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    scikit-learn
    joblib
